# mask-ukf

./: CMakeLists.txt  README.md
results/scripts/add-s/: eval_icp_nrt_gt.sh  eval_icp_nrt_mrcnn.sh  eval_icp_nrt_posecnn.sh  eval_icp_rt_mrcnn.sh  eval_mask-ukf_nrt_gt.sh  eval_mask-ukf_nrt_mrcnn.sh  eval_mask-ukf_nrt_posecnn.sh  eval_mask-ukf_rt_mrcnn.sh
results/scripts/rmse/: eval_densefusion_nrt_posecnn.sh  eval_icp_nrt_gt.sh  eval_icp_nrt_mrcnn.sh  eval_icp_nrt_posecnn.sh  eval_icp_rt_mrcnn.sh  eval_mask-ukf_nrt_gt.sh  eval_mask-ukf_nrt_mrcnn.sh  eval_mask-ukf_nrt_posecnn.sh  eval_mask-ukf_rt_mrcnn.sh
results/scripts/rmse_velocity/: eval_mask-ukf_nrt_gt.sh  eval_mask-ukf_nrt_mrcnn.sh  eval_mask-ukf_nrt_posecnn.sh  eval_mask-ukf_rt_mrcnn.sh
src/: CMakeLists.txt
src/camera-library/: CMakeLists.txt
src/camera-library/src/: RealsenseCamera.cpp  YCBVideoCamera.cpp  YCBVideoCameraNRT.cpp
src/object-tracking/: CMakeLists.txt
src/object-tracking/conf/: config_ycbvideo.ini  config_ycbvideonrt.ini  realsense2_dev.ini
src/object-tracking/include/: Correction.h  CorrectionICP.h  Filter.h  GaussianCorrection.h  GaussianFilter.h  InitGroundTruth.h  MaskSegmentation.h  ObjectMeasurements.h  ObjectPointCloudPrediction.h  PointCloudPrediction.h  PointCloudSegmentation.h  SUKFCorrection.h  StaticPrediction.h  Validator2D.h
src/object-tracking/src/: Correction.cpp  CorrectionICP.cpp  DiscretizedKinematicModel.cpp  Filter.cpp  GaussianCorrection.cpp  GaussianFilter.cpp  InitGroundTruth.cpp  MaskSegmentation.cpp  ObjectMeasurements.cpp  ObjectPointCloudPrediction.cpp  PointCloudSegmentation.cpp  SUKFCorrection.cpp  StaticPrediction.cpp  Validator2D.cpp  main.cpp
src/object-tracking/thrift/: objecttracking.thrift
src/validation/: CMakeLists.txt
src/validation/include/: Metric.h  MetricAddS.h  MetricEmpty.h  MetricRMS.h  MetricRMSSymmetry.h  MetricRMSV.h  ObjectResults.h  SingleVideoResult.h
src/validation/src/: Metric.cpp  MetricAddS.cpp  MetricEmpty.cpp  MetricRMS.cpp  MetricRMSSymmetry.cpp  MetricRMSV.cpp  ObjectResults.cpp  SingleVideoResult.cpp  main.cpp
testing/nrt/: test_alg.sh  test_icp.sh  test_icp_single.sh  test_maskukf.sh
testing/rt/: test_alg.sh  test_icp.sh  test_maskukf.sh  test_maskukf_single.sh
